# job-chrono

./: manage.py  pyproject.toml
chrono/: admin.py  apps.py  models.py  urls.py  views.py
chrono/migrations/: 0001_initial.py
job_chrono/: asgi.py  settings.py  urls.py  wsgi.py
